polybar && hlwm minor update

--- a/.config/polybar/configGruvbox.ini
+++ b/.config/polybar/configGruvbox.ini
@@ -29,7 +29,8 @@ bottom = false
 fixed-center = true
 
 border-size = 2
-border-color = ${colors.semi-trans}
+border-color = ${colors.trans}
+; border-color = ${colors.semi-trans}
 
 ; wm-restack = bspwm
 ; wm-restack = i3
@@ -48,7 +49,7 @@ foreground = ${colors.fg}
 
 font-0 = "JetBrainsMono Nerd Font:style=Medium:size=9;1"
 font-1 = "JetBrainsMono Nerd Font:style=Bold:size=9;3"
-font-2 = "JetBrainsMono Nerd Font:size=19;3"
+font-2 = "JetBrainsMono Nerd Font:size=20;4"
 font-3 = "Material Icons Outlined:9;4"
 font-4 = "JetBrainsMono Nerd Font Mono:style=Medium:size=20;4"
 font-5 = "JetBrainsMono Nerd Font Mono:style=Regular:size=20;3"
@@ -59,15 +60,15 @@ font-7 = "JetBrainsMono Nerd Font Mono:style=Medium:size=10;1"
 inherit = config
 
 modules-left = launcher hlwm round-right
-modules-center = round-left-dark date time round-right-dark margin round-left-dark wifi ethernet netspeed round-right-dark
-modules-right = round-left keyboard volume brightness battery power
+modules-center = round-left keyboard volume brightness round-right margin round-left-dark wifi ethernet netspeed round-right-dark
+modules-right = round-left-dark date time battery power
 
 tray-background = ${colors.bg-alt}
 tray-padding = 2
 tray-position = right
 tray-maxsize = 16
 tray-detached = true
-tray-offset-x = 80
+tray-offset-x = 120
 ; tray-offset-y = 40
 tray-scale = 1.0
 
