--- a/.config/polybar/modulesGruvbox.ini
+++ b/.config/polybar/modulesGruvbox.ini
@@ -146,12 +146,12 @@ format-volume-background = ${colors.semi-trans}
 ; format-volume-underline = ${colors.blue}
 
 label-muted = mute
-label-muted-foreground = ${colors.fg}
+label-muted-foreground = ${colors.red-dark}
 ; label-muted-background = ${colors.semi-trans}
 ; label-muted-padding = 1
 
 format-muted = %{T5}婢%{T-} <label-muted>
-format-muted-foreground = ${colors.magenta}
+format-muted-foreground = ${colors.red-dark}
 format-muted-background = ${colors.semi-trans}
 format-muted-padding = 1
 ; format-muted-margin = 1
@@ -206,7 +206,7 @@ format-full-prefix-foreground = ${colors.green-dark}
 ; Available tokens:
 ;   %percentage% (default)
 label-full = "%percentage%%"
-label-full-font = 1
+label-full-font = 2
 label-full-padding = 1
 
 ; Available tags:
@@ -226,6 +226,7 @@ format-discharging-padding = 1
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
 label-discharging = "%percentage%%"
+label-discharging-font = 2
 
 ; Only applies if <ramp-capacity> is used
 ; ramp-capacity-0 = 
@@ -255,7 +256,7 @@ ramp-capacity-foreground = ${colors.orange-light}
 ;   <ramp-capacity>
 ;   <animation-charging>
 format-charging = <animation-charging> <label-charging>
-format-charging-background = ${colors.semi-trans}
+format-charging-background = ${colors.bg-alt}
 ; format-charging-foreground = ${colors.orange}
 ; format-charging-margin = 1
 format-charging-padding = 1
@@ -264,6 +265,7 @@ format-charging-padding = 1
 ;   %time%
 ;   %consumption% (shows current charge rate in watts)
 label-charging = "%percentage%%"
+label-charging-font = 2
 
 ; Only applies if <animation-charging> is used
 animation-charging-0 = ""
@@ -292,7 +294,7 @@ ping-interval = 3.0
 
 ; click-right = "alacritty -t nmtui -e nmtui"
 
-label-disconnected = %{A1:~/.local/bin/networkmanager_dmenu:}%{A3:alacritty -t nmtui -e nmtui:} %{A}%{A}
+label-disconnected = %{A3:~/.local/bin/networkmanager_dmenu:}%{A1:alacritty -t nmtui -e nmtui:} %{A}%{A}
 ; label-disconnected = ""
 label-disconnected-font = 5
 format-disconnected = %{T6}|%{T-} <label-disconnected>
@@ -302,7 +304,7 @@ format-disconnected-padding = 1
 format-disconnected-foreground = ${colors.yellow-light}
 format-disconnected-background = ${colors.bg-alt}
 
-label-connected = " "
+label-connected = %{A3:~/.local/bin/networkmanager_dmenu:}%{A1:alacritty -t nmtui -e nmtui:} %{A}%{A}
 label-connected-font = 5
 ; label-connected-padding = 1
 ; label-connected-foreground = ${colors.info_yellow}
@@ -390,7 +392,7 @@ format-connected-prefix-background = ${colors.bg-alt}
 ; Default: %ifname% %local_ip%
 ; label-connected = " %{A1:networkmanager_dmenu &:}%essid% %{A} %{F#78909C} %downspeed%  %upspeed%%{F-} "
 ; label-connected = %{A1:~/.local/bin/networkmanager_dmenu:}%{A3:bash -c '/usr/bin/nmtui':}%{T9}%{T} %essid%%{A}%{A}
-label-connected = %{A1:~/.local/bin/networkmanager_dmenu:}%{A3:alacritty -t nmtui -e nmtui:}%essid%%{A}%{A}
+label-connected = %{A3:~/.local/bin/networkmanager_dmenu:}%{A1:alacritty -t nmtui -e nmtui:}%essid%%{A}%{A}
 ; label-connected-padding = 1
 ; label-connected-background = ${colors.info_yellow}
 ; label-connected-foreground = ${colors.background}
@@ -409,7 +411,7 @@ format-disconnected-prefix-background = ${colors.bg-alt}
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
 ; label-disconnected = "%{A1:~/.local/bin/networkmanager_dmenu:}%{A2:nmtui:}Offline%{A}%{A}"
-label-disconnected = "%{A1:~/.local/bin/networkmanager_dmenu:}%{A2:nmtui:}%{T5}ﲁ%{T-}%{A}%{A}"
+label-disconnected = "%{A3:~/.local/bin/networkmanager_dmenu:}%{A1:nmtui:}%{T5}ﲁ%{T-}%{A}%{A}"
 label-disconnected-foreground = ${colors.fg}
 ; label-disconnected = " %{A2:nm-connection-editor:}Offline %{A}"
 ;;label-disconnected-foreground = #66ffffff
