vifm,polybar,hlwm,tmux,sxhkd fixes

--- a/.config/polybar/modulesGruvbox.ini
+++ b/.config/polybar/modulesGruvbox.ini
@@ -32,7 +32,7 @@ content-foreground = ${colors.trans}
 
 [module/date]
 type = internal/date
-date = "%a %m/%d/%y"
+date = "%a %d/%m/%y"
 interval = 5
 
 label = " %date%"
@@ -401,7 +401,7 @@ label-connected = %{A3:~/.local/bin/networkmanager_dmenu:}%{A1:alacritty -t nmtu
 ;   <label-disconnected> (default)
 format-disconnected = <label-disconnected>
 format-disconnected-padding = 1
-format-disconnected-prefix-background = ${colors.bg-alt}
+format-disconnected-background = ${colors.bg-alt}
 ; format-disconnected-prefix = ﲁ
 ; format-disconnected-prefix-font = 2
 ; format-disconnected-prefix-padding = 1
@@ -412,7 +412,7 @@ format-disconnected-prefix-background = ${colors.bg-alt}
 ; Default: (none)
 ; label-disconnected = "%{A1:~/.local/bin/networkmanager_dmenu:}%{A2:nmtui:}Offline%{A}%{A}"
 label-disconnected = "%{A3:~/.local/bin/networkmanager_dmenu:}%{A1:nmtui:}%{T5}ﲁ%{T-}%{A}%{A}"
-label-disconnected-foreground = ${colors.fg}
+label-disconnected-foreground = ${colors.yellow-light}
 ; label-disconnected = " %{A2:nm-connection-editor:}Offline %{A}"
 ;;label-disconnected-foreground = #66ffffff
 
@@ -481,7 +481,8 @@ format-connected-background = ${colors.bg-alt}
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
 ; Default: (none)
-label-disconnected = " "
+label-disconnected = ""
+label-disconnected-background = ${colors.bg-alt}
 ; label-disconnected-padding = 1
 ; label-disconnected = " Offline "
 ;;label-disconnected-foreground = #66ffffff
@@ -496,7 +497,7 @@ blacklist-1 = scroll lock
 ; Available tags:
 ;   <label-layout> (default)
 ;   <label-indicator> (default)
-format = <label-layout> <label-indicator>
+format = <label-layout><label-indicator>
 format-background = ${colors.semi-trans}
 ; format-background = #bc99ed
 format-prefix = " "
