--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,7 +2,7 @@
 # Version : v3.0.1
 
 log-level = "info";
-log-file = "$HOME/compton.log";
+log-file = "~/compton.log";
 
 #################################
 #             Shadows           #
@@ -25,6 +25,8 @@ shadow-offset-y = -7;
 shadow-exclude = [
 	"name = 'Notification'",
 	"class_g = 'VirtualBox'",
+	# "name = 'herbstluftwm'",
+	# "_NET_WM_NAME@:s = 'herbstluftwm'",
 	"class_g = 'Conky'",
 	"class_g = 'Rofi'",
 	"class_g ?= 'Notify-osd'",
@@ -39,7 +41,10 @@ shadow-exclude = [
 # Opacity
 inactive-opacity = 0.9;
 active-opacity = 1.0;
+# Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
+# frame-opacity = 1.0
 #frame-opacity = 0.9;
+# frame-opacity = 0.7;
 inactive-opacity-override = false;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
@@ -74,6 +79,8 @@ blur-kern = "3x3box";
 blur-background-exclude = [
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
+	# "_NET_WM_NAME@:s = 'herbstluftwm'",
+	# "class_g = 'herbstluftwm'",
 	"class_g = 'Peek'",
 	"class_g = 'discord'",
 	"class_g = 'Pavucontrol'",
@@ -83,6 +90,12 @@ blur-background-exclude = [
 # opacity-rule = [ "80:class_g = 'XTerm'" ];
 #opacity-rule = [ "80:class_g = 'UXTerm'" ];
 #opacity-rule = [ "99:class_g = 'VirtualBox'" ];
+# opacity-rule = [ "10:class_g = 'herbstluftwm'" ];
+# opacity-rule = [ "10:_NET_WM_NAME@:s = 'herbstluftwm'" ];
+opacity-rule = [ 
+	"10:class_g = 'herbstluftwm'",
+	"10:_NET_WM_NAME@:s = 'herbstluftwm'"
+];
 
 # Fading
 fading = true;
@@ -112,7 +125,7 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "false";
+vsync = false;
 # sw-opti = true;
 unredir-if-possible = false;
 # unredir-if-possible-delay = 5000;
