--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -114,7 +114,7 @@ font:
     #   - (Windows) Consolas
     # family: Hack Nerd Font Mono
     # family: monospace
-    family: FiraCode Nerd Font
+    family: FiraCode Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     style: Regular
@@ -127,7 +127,7 @@ font:
     # value specified for the normal font.
     # family: monospace
     # family: Hack Nerd Font Mono
-    family: FiraCode Nerd Font
+    family: FiraCode Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -151,7 +151,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Hack Nerd Font
+    family: Hack Nerd Font Mono
     # family: monospace
     # family: FiraCode Nerd Font
 
