--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,7 +2,7 @@
 # Version : v3.0.1
 
 log-level = "info";
-log-file = "~/compton.log";
+log-file = "./compton.log";
 
 #################################
 #             Shadows           #
@@ -25,8 +25,8 @@ shadow-offset-y = -7;
 shadow-exclude = [
 	"name = 'Notification'",
 	"class_g = 'VirtualBox'",
-	# "name = 'herbstluftwm'",
-	# "_NET_WM_NAME@:s = 'herbstluftwm'",
+	"name = 'herbstluftwm'",
+	"_NET_WM_NAME@:s *?= 'herbstluftwm'",
 	"class_g = 'Conky'",
 	"class_g = 'Rofi'",
 	"class_g ?= 'Notify-osd'",
@@ -42,7 +42,7 @@ shadow-exclude = [
 inactive-opacity = 0.9;
 active-opacity = 1.0;
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
+# frame-opacity = 0.2
 #frame-opacity = 0.9;
 # frame-opacity = 0.7;
 inactive-opacity-override = false;
@@ -57,9 +57,10 @@ inactive-opacity-override = false;
 # Parameters for background blurring, see the *BLUR* section for more information.
 # blur-method = "dual_kawase"
 blur: {
-	method = "dual_kawase";
+	# method = "dual_kawase";
+	method = "kernel";
 	strength = 7;
-	background = false;
+	# background = true;
 }
 # blur-size = 12
 #
@@ -72,14 +73,14 @@ blur: {
 # The name of the switch may change without prior notifications.
 
 # blur-background = false;
-# blur-background-frame = true;
+blur-background-frame = true;
 blur-kern = "3x3box";
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 # blur-background-fixed = true;
 blur-background-exclude = [
 	"window_type = 'dock'",
 	"window_type = 'desktop'",
-	# "_NET_WM_NAME@:s = 'herbstluftwm'",
+	"_NET_WM_NAME@:s *?= 'herbstluftwm'",
 	# "class_g = 'herbstluftwm'",
 	"class_g = 'Peek'",
 	"class_g = 'discord'",
@@ -93,8 +94,9 @@ blur-background-exclude = [
 # opacity-rule = [ "10:class_g = 'herbstluftwm'" ];
 # opacity-rule = [ "10:_NET_WM_NAME@:s = 'herbstluftwm'" ];
 opacity-rule = [ 
-	"10:class_g = 'herbstluftwm'",
-	"10:_NET_WM_NAME@:s = 'herbstluftwm'"
+	# "10:class_g = 'herbstluftwm'",
+	"0:_NET_WM_NAME@:s = 'herbstluftwm'",
+	"90:_NET_WM_NAME@:s = 'tdrop'"
 ];
 
 # Fading
@@ -117,13 +119,13 @@ fade-exclude = [
 corner-radius = 4
 
 # Other
-#backend = "glx";
-backend = "xrender";
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
+backend = "glx";
+# backend = "xrender";
+# mark-wmwin-focused = true;
+# mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
 detect-rounded-corners = true;
-detect-client-opacity = true;
+# detect-client-opacity = true;
 refresh-rate = 0;
 vsync = false;
 # sw-opti = true;
@@ -133,10 +135,12 @@ unredir-if-possible = false;
 #focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 focus-exclude = [
-     "class_g = 'Cairo-clock'",
-     "name *?= 'Steam'",
-     "class_g *?= 'Steam'",
-     "class_g *?= 'Virtualbox'"
+	"class_g = 'herbstluftwm'",
+	"_NET_WM_NAME@:s *?= 'herbstluftwm'",
+	"class_g = 'Cairo-clock'",
+	"name *?= 'Steam'",
+	"class_g *?= 'Steam'",
+	"class_g *?= 'Virtualbox'"
 ];
 
 detect-transient = true;
@@ -157,9 +161,9 @@ invert-color-include = [ ];
 # Window type settings
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 1; }
+  dropdown_menu = { opacity = 1; }
 };
